# AIAgent_videorecord

./: .gitignore  IMPLEMENTATION_PLAN.md  MONOREPO_STRUCTURE_ANALYSIS.md  Plan_product2  README.md  TASK_3_COMPLETE.md  Trace-Driven Audio Sync.md  Universal Automation Engine.md  Webreel_Type_Hang_Analysis.md  analysis_excel_drag_offscreen.md  auth_state_json_analysis.md  code2video.txt  ctrl_f5_fix_test_config.json  implementation_plan_OS.md  implementation_plan_agent_do_duong.md  loicansua.md  office_automation_architecture_plan.md  phase1_product.md  pnpm-lock.yaml  run_os_worker.ps1  test-xpath-build.json  tmp  upgrade_log.md  yeucau.md
src/webreel-ai-agent/: .gitignore  ADMIN_BROWSER_MANAGEMENT.md  ADMIN_TESTING_SUMMARY.md  AUTHENTICATION_STATUS.md  COMPLETE_SYSTEM_SUMMARY.md  CORS_FIX_GUIDE.md  DA_FIX_3_VAN_DE.md  DIRECTORY_STRUCTURE_OPTIMIZATION.md  DOCKER_QUICK_START.md  FINAL_ADMIN_SUMMARY.md  FRONTEND_AUTH_IMPLEMENTATION.md  FRONTEND_V4_USER_GUIDE.md  GOOGLE_DRIVE_PHASE2_COMPLETE.md  GOOGLE_SLIDES_PHASE2_COMPLETE.md  MONGODB_SETUP.md  MONGODB_USER_TRACKING_SUCCESS.md  MP4_CORRUPTION_FIX.md  MULTI_JOB_LOGGING_ANALYSIS.md  OS_WORKER_SECURITY_RUNBOOK.md  PHASE_1_COMPLETE.md  PHASE_1_FINAL_REPORT.md  PHASE_1_TONG_KET.md  PIPELINE_V3_SUMMARY.md  PRESENTATION_WORKERS_COMPARISON.md  QUICK_START_SESSION.md  QUICK_TEST_GUIDE.md  RBAC_IMPLEMENTATION_PLAN.md  README.md  READY_TO_TEST.md  REGISTER_FIX_SUMMARY.md  SERVER_503_FIX.md  TABLE_LIGHT_MODE_FIX.md  TASK6_WORKER_UPDATES_SUMMARY.md  TASK7_CHECKLIST.md  TASK7_COMMIT_MESSAGE.txt  TASK_4_TEST_RESULTS.md  TESTING_GUIDE.md  (+34 more)
(+663 files in other folders)
